--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,16 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# Report outputs (compiled LaTeX)
+report/*.pdf
+report/*.log
+report/*.aux
+report/*.out
+report/*.toc
+report/*.lof
+report/*.lot
+report/*.fls
+report/*.fdb_latexmk
+report/*.synctex.gz
+output/
