--- a/pyproject.toml
+++ b/pyproject.toml
@@ -66,7 +66,11 @@ convention = "numpy"
 
 [tool.ruff.per-file-ignores]
 # Ignore import rules in __init__.py files
-"__init__.py" = ["F401", "F403"]
+"__init__.py" = [
+    "F401", 
+    "F403", 
+    "D104",
+]
 # More lenient rules for test files
 "tests/**" = ["S101", "PLR2004", "SLF001"]
 # More lenient rules for scripts and exploratory files
