Enhance post-generation script and project configuration: add additional package installations and improve data folder settings with Pydantic validation.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,3 +7,7 @@ authors = [
 ]
 readme = "README.md"
 keywords = ["statistics", "analysis", "data-science"]
+dependencies = [
+    "pydantic>=2.11.7",
+    "pydantic-settings>=2.10.1",
+]
