--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,12 @@ authors = [
 readme = "README.md"
 keywords = ["statistics", "analysis", "data-science"]
 dependencies = [
+    "cookiecutter>=2.6.0",
     "pydantic>=2.11.7",
     "pydantic-settings>=2.10.1",
+]
+
+[dependency-groups]
+dev = [
+    "pytest>=8.4.1",
 ]
