Enhance project structure and documentation with editable install instructions, updated package configuration, and improved logging settings

--- a/{{ cookiecutter.repo_name }}/pyproject.toml
+++ b/{{ cookiecutter.repo_name }}/pyproject.toml
@@ -9,3 +9,11 @@ readme = "README.md"
 keywords = ["statistics", "analysis", "data-science"]
 
 requires-python = ">=3.12"
+
+[build-system]
+requires = ["setuptools>=61.0", "wheel"]
+build-backend = "setuptools.build_meta"
+
+[tool.setuptools.packages.find]
+where = ["src"]
+include = ["{{ cookiecutter.repo_name }}*"]
